--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -13,8 +13,7 @@ jobs:
                 os: [ubuntu-latest]
                 php: [8.0]
                 laravel: [8.*]
-#                dependency-version: [prefer-lowest, prefer-stable]
-                dependency-version: [prefer-stable]
+                dependency-version: [prefer-lowest, prefer-stable]
                 include:
                     -   laravel: 8.*
                         testbench: 6.*
