--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,7 +11,7 @@ jobs:
             fail-fast: true
             matrix:
                 os: [ubuntu-latest]
-                php: [^7.4]
+                php: [7.4]
                 laravel: [8.*]
                 dependency-version: [prefer-lowest, prefer-stable]
                 include:
