[TEST] Github Action failure

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -49,13 +49,17 @@ jobs:
             -   name: Execute tests
                 run: vendor/bin/phpunit
 
-            - uses: 8398a7/action-slack@v3
-              with:
-                  status: ${{ job.status }}
-                  author_name: Bot the Builder
-                  fields: repo,commit
-                  mention: author
-                  if_mention: failure,cancelled
-              env:
-                  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-              if: always() # Pick up events even if the job fails or is canceled.
+            -   name: Get git commit data
+                uses: rlespinasse/git-commit-data-action@1.1.0
+
+            -   name: Post status to Slack
+                uses: 8398a7/action-slack@v3
+                with:
+                    status: ${{ job.status }}
+                    author_name: ${{ env.GIT_COMMIT_AUTHOR_NAME }}
+                    fields: repo,commit,message
+                    mention: author
+                    if_mention: failure,cancelled
+                env:
+                    SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+                if: always() # Pick up events even if the job fails or is canceled.
