[TEST] Github Action failure again

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -71,7 +71,7 @@ jobs:
                 uses: 8398a7/action-slack@v3
                 with:
                     status: ${{ job.status }}
-                    author_name: ${{ env.GIT_COMMIT_AUTHOR_NAME }}
+                    author_name: "${{ env.GIT_COMMIT_AUTHOR_NAME }}"
                     fields: repo,commit,message
                     mention: ${{ env.GIT_COMMIT_AUTHOR_NAME }}
                     if_mention: failure,cancelled
