--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -73,7 +73,7 @@ jobs:
                     status: ${{ job.status }}
                     author_name: "${{ env.GIT_COMMIT_AUTHOR_NAME }}"
                     fields: repo,commit,message
-                    mention: ${{ env.GIT_COMMIT_AUTHOR_NAME }}
+                    mention: "${{ env.GIT_COMMIT_AUTHOR_NAME }}"
                     if_mention: failure,cancelled
                 env:
                     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
