--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,9 +33,10 @@ jobs:
 
             -   name: Print some git data
                 run: |
-                    echo "1: $(echo ${{ env.GIT_COMMIT_AUTHOR_NAME }})"
-                    echo "2: $(echo env.GIT_COMMIT_AUTHOR_NAME)"
-                    echo "3: $(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)"
+                    echo "1: $(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)"
+                    echo "AUTHOR_FIRST_NAME=$(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)"
+                    echo "AUTHOR_FIRST_NAME=$(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)" >> $GITHUB_ENV
+                    echo "name: $AUTHOR_FIRST_NAME"
                     echo "AUTHOR_FIRSTNAME=$(echo ${{ env.GIT_COMMIT_AUTHOR_NAME }} | head -n1 | cut -d ' ' -f1)" >> $GITHUB_ENV
                     echo "env.AUTHOR_FIRSTNAME: ${{ env.AUTHOR_FIRSTNAME }}"
                     echo "${{ env.GIT_COMMIT_AUTHOR_NAME }}" | head -n1 | cut -d " " -f1
