--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -36,10 +36,6 @@ jobs:
                     echo "1: $(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)"
                     echo "AUTHOR_FIRST_NAME=$(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)"
                     echo "AUTHOR_FIRST_NAME=$(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)" >> $GITHUB_ENV
-                    echo $AUTHOR_FIRST_NAME
-                    echo "AUTHOR_FIRSTNAME=$(echo ${{ env.GIT_COMMIT_AUTHOR_NAME }} | head -n1 | cut -d ' ' -f1)" >> $GITHUB_ENV
-                    echo "env.AUTHOR_FIRSTNAME: ${{ env.AUTHOR_FIRSTNAME }}"
-                    echo "${{ env.GIT_COMMIT_AUTHOR_NAME }}" | head -n1 | cut -d " " -f1
                     echo "Get author info"
                     echo " - ${{ env.GIT_COMMIT_AUTHOR }}"
                     echo " - ${{ env.GIT_COMMIT_AUTHOR_NAME }}"
@@ -52,6 +48,9 @@ jobs:
                     echo " - ${{ env.GIT_COMMIT_MESSAGE_SUBJECT }}"
                     echo " - ${{ env.GIT_COMMIT_MESSAGE_SUBJECT_SANITIZED }}"
                     echo " - ${{ env.GIT_COMMIT_MESSAGE_BODY }}"
+
+            -   name: Test
+                run: echo $AUTHOR_FIRST_NAME
 
             -   name: Set up MySQL
                 run: |
