--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -69,4 +69,4 @@ jobs:
                     if_mention: failure,cancelled
                 env:
                     SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-                if: always() # Pick up events even if the job fails or is canceled.
+                if: always() # Pick up events even if the job fails or is canceled
