--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -64,9 +64,7 @@ jobs:
                     echo "https://github.com/Daalder/job-central/commit/$GITHUB_SHA"
                     echo "$GITHUB_HEAD_REF"
                     echo "@$AUTHOR_FIRSTNAME"
-                    echo "$BASE_URL?channel=$CHANNEL&link_names=true&text=@$AUTHOR_FIRSTNAME&pretty=1"
-                    curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "$BASE_URL?channel=$CHANNEL&link_names=true&text=%40$AUTHOR_FIRSTNAME&pretty=1"
-                    curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "https://slack.com/api/chat.postMessage?channel=programmers&link_names=true&text=TEST%3A%20%40vincent&pretty=1"
+                    curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "$BASE_URL?channel=$CHANNEL&link_names=true&text=TEST%3A%20%40vincent&pretty=1"
                 env:
                     BEARER_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
                     BASE_URL: https://slack.com/api/chat.postMessage
