--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -29,7 +29,7 @@ jobs:
             -   name: Get git commit data 2
                 run: |
                     echo "AUTHOR_FIRSTNAME=$(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)" >> $GITHUB_ENV
-#                    echo "GIT_SHORT_HASH=$(git rev-parse --short $GITHUB_SHA)" >> $GITHUB_ENV
+                    echo "GIT_SHORT_HASH=$(git rev-parse --short $GITHUB_SHA)" >> $GITHUB_ENV
 #                    echo "GIT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
 
             -   name: Set up MySQL
@@ -60,11 +60,11 @@ jobs:
 
             -   name: Post failure status to Slack
                 run: |
-                    echo ":no_entry: Job-Central tests failed following commit"
                     echo "https://github.com/Daalder/job-central/commit/$GITHUB_SHA"
                     echo "$GITHUB_HEAD_REF"
                     echo "@$AUTHOR_FIRSTNAME"
-                    curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "$BASE_URL?channel=$CHANNEL&link_names=true&text=TEST%3A%20%40vincent&pretty=1"
+                    curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "$BASE_URL?channel=$CHANNEL&link_names=true&pretty=1" \
+                        --data-urlencode "text=:no_entry: Job-Central tests failed following commit <$(echo 'https://github.com/Daalder/job-central/commit/$GITHUB_SHA')|GIT_SHORT_HASH>"
                 env:
                     BEARER_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
                     BASE_URL: https://slack.com/api/chat.postMessage
