--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -30,7 +30,7 @@ jobs:
                 run: |
                     echo "AUTHOR_FIRSTNAME=$(echo $GIT_COMMIT_AUTHOR_NAME | head -n1 | cut -d ' ' -f1)" >> $GITHUB_ENV
                     echo "GIT_SHORT_HASH=$(git rev-parse --short $GITHUB_SHA)" >> $GITHUB_ENV
-#                    echo "GIT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
+                    echo "GIT_BRANCH=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
 
             -   name: Set up MySQL
                 run: |
@@ -64,7 +64,7 @@ jobs:
                     echo "$GITHUB_HEAD_REF"
                     echo "@$AUTHOR_FIRSTNAME"
                     curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "$BASE_URL?channel=$CHANNEL&link_names=true&pretty=1" \
-                        --data-urlencode "text=:no_entry: Job-Central tests failed for $GITHUB_HEAD_REF @ <$(echo https://github.com/Daalder/job-central/commit/$GITHUB_SHA)|$GIT_SHORT_HASH> by @$AUTHOR_FIRSTNAME"
+                        --data-urlencode "text=:no_entry: Job-Central tests failed for `$GIT_BRANCH` @ `<$(echo https://github.com/Daalder/job-central/commit/$GITHUB_SHA)|$GIT_SHORT_HASH>` by @$AUTHOR_FIRSTNAME"
                 env:
                     BEARER_TOKEN: ${{ secrets.SLACK_BEARER_TOKEN }}
                     BASE_URL: https://slack.com/api/chat.postMessage
