--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,9 +46,10 @@ jobs:
 
             -   name: Install dependencies
                 run: |
-                    composer config --global --auth http-basic.repo.packagist.com egbertwietses ${{secrets.DAALDER}}
-                    composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
-                    composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+                    echo "no"
+#                    composer config --global --auth http-basic.repo.packagist.com egbertwietses ${{secrets.DAALDER}}
+#                    composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+#                    composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
             -   name: Setup Problem Matches
                 run: |
