--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -61,6 +61,9 @@ jobs:
 
             -   name: Post failure status to Slack
                 run: |
+                    echo ${{ job.status }}
+                    echo "$( echo \"${{ job.status }}\" )"
+                    echo job.status
                     curl -X POST -H "Authorization: Bearer $BEARER_TOKEN" "$BASE_URL?channel=$CHANNEL&link_names=true&pretty=1" \
                         --data-urlencode "text=$(if [ \"${{ job.status }}\" == \"failed\" ]; then echo \":no_entry: Job-Central tests failed\"; else echo \":white_check_mark: Job-Central tests succeeded\"; fi) for $(echo '`')$(echo $GIT_BRANCH)$(echo '`') @ $(echo '`')<$(echo https://github.com/Daalder/job-central/commit/$GITHUB_SHA)|$GIT_SHORT_HASH>$(echo '`') by @$AUTHOR_FIRSTNAME"
                 env:
