--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
+        "orchestra/database": "6.x-dev",
         "phpunit/phpunit": "^9.3"
     },
     "autoload": {
