--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "require": {
         "php": "^7.3|^8.0",
         "ext-zip": "*",
-        "pionect/daalder": "dev-multi-vat-support"
+        "pionect/daalder": "^11"
     },
     "require-dev": {
         "orchestra/testbench": "^6.0",
